# keypo-wallet

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  keypo-account-spec.md  keypo-implementation-roadmap.md  keypo-pay-spec.md  keypo-wallet-spec.md  package.json  vault-backup-implementation-plan.md
.claude/: plan-draft.md
.claude/commands/: plan-and-review.md
.github/workflows/: docs.yml  release-signer.yml  release.yml  rust.yml  swift.yml
demo/checkout/: .env.vault-template  .gitignore  README.md  SKILL.md  docker-compose.yml  run-with-vault.sh
demo/hermes-checkout/: README.md  comparison-shopping-skill-spec-v3.md
demo/sneakerbot/: README.md  run-with-vault.sh
deployments/: README.md  base-sepolia.json
docs/: architecture.md  conventions.md  deployment.md  documentation-spec.md  keypo-pay-architecture.md  manual-testing.md  quality.md  setup.md
docs/decisions/: 001-eip7702-ephemeral-eoa.md  002-p256-prehash-signing.md  003-erc7821-batch-mode.md  004-alloy-version-pinning.md  005-keypo-signer-subprocess.md  (+2 more)
homebrew/: README.md
keypo-account/: README.md  foundry.toml
keypo-pay/: CLAUDE.md  Cargo.toml  README.md
keypo-pay/src/: address.rs  config.rs  error.rs  lib.rs  mpp.rs  rlp.rs  rpc.rs  signature.rs  signer.rs  token.rs  transaction.rs  types.rs
keypo-signer/: CLAUDE.md  Info.plist  JSON-FORMAT.md  Package.swift  README.md  keypo-signer.entitlements
keypo-signer-cli/: CLAUDE.md  JSON-FORMAT.md
keypo-wallet/: Cargo.toml  README.md
keypo-wallet/abi/: KeypoAccount.json
keypo-wallet/src/: account.rs  bundler.rs  config.rs  error.rs  lib.rs  paymaster.rs  query.rs  rpc.rs  signer.rs  state.rs  traits.rs  transaction.rs  types.rs
keypo-wallet/src/impls/: keypo_account.rs  mod.rs
keypo-wallet/tests/: integration_scaffolding.rs  integration_send.rs  integration_setup.rs
scripts/: build-app-bundle.sh  check-docs.sh
(+146 files in other folders)
